src/test/deca/syntax/valid/cast/valid_cast_int.deca
// Description:
//    Tests a syntactically correct program for a valid cast expression
//
// Results:
//    No errors.
//
// History:
//    created on 07/01/2025

{
    int a = (int) (10.5);
}